--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ruairi Lambert - Full Stack Developer</title>
-	<link rel="stylesheet" href="test.css">
+	<link rel="stylesheet" href="Stylesheet.css">
 </head>
 <body>
     <!-- Navigation -->
