--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
                             <span class="tech-tag">3D Graphics</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">View Full Scene</a>
+                            <a href="3D Retro Computer Scene.html" class="project-link">View Full Scene</a>
                             <a href="#" class="project-link">GitHub</a>
                         </div>
                     </div>
