--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Full Stack Developer</title>
+    <title>Ruairi - Full Stack Developer</title>
     <style>
         * {
             margin: 0;
@@ -480,7 +480,7 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1>Hi, I'm Your Name</h1>
+            <h1>Hi, I'm Ruairi</h1>
             <p class="subtitle">Full Stack Developer & Problem Solver</p>
             <p class="description">
                 I create beautiful, responsive web applications using modern technologies. 
